--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+<header> 
+  <nav class="navigation-header">
+<a class="main-header-logo">
+  <img src="C:\Users\Анастасия\Documents\GitHub\1872173-gllacy-34\img\logo.jpg" alt="Логотип">
+</a>
+<a href="#" class="catalog">Каталог</a>
+<a href="#" class="delivery">Доставка и оплата</a>
+<a href="#" class="about us">О компании</a>
+  </nav> 
+</header>
+<main>
 
+</main>
+<footer>
+
+</footer>
   </body>
 </html>
