--- a/catalog.html
+++ b/catalog.html
@@ -8,12 +8,8 @@
 <body>
     <header class="page-header">
         <nav class="navigation">
+          <a class="navigation-logo" href="index.html"><img class="logo" src="image\logo.svg" width="137" height="56"  alt="Логотип фирмы Глейси"></a>
           <ul class="navigation-list">
-            <li class="navigation-item">
-              <a class="navigation-logo" href="index.html">
-                <img class="logo" src="img\logo.jpg" alt="Логотип фирмы Глейси">
-              </a>
-            </li>
             <li class="navigation-item">
               <a class="navigation-link navigation-link-current" href="catalog.html">Каталог</a>
             </li>
@@ -124,85 +120,85 @@
         <section class="catalog">
             <ul class="catalog-list">
                 <li class="catalog-item">
-                        <img class="catalog-item-image" src="" alt="Малинка">
                         <h3 class="catalog-item-title">Малинка</h3>
+                        <img class="catalog-item-image" src="image\card\raspberry.jpg" width="168" height="168" alt="Малинка">
                         <p class="catalog-item-description">Сливочное мороженое с малиновым джемом</p>
                         <b class="price">310 р/<span>кг</span></b>
                         <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>    
                 </li>
                 <li class="catalog-item">
-                    <img class="catalog-item-image" src="" alt="Фисташка">
                     <h3 class="catalog-item-title">Фисташка</h3>
+                    <img class="catalog-item-image" src="image\card\pistachio.jpg" width="168" height="168" alt="Фисташка">
                     <p class="catalog-item-description"> Фисташковый пломбир с кусочками шоколада</p>
                     <b class="price">340 р/<span>кг</span></b>
                     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
                 </li>
             <li class="catalog-item">
-                <img class="catalog-item-image" src="" alt="Черника">
                 <h3 class="catalog-item-title">Черника</h3>
+                <img class="catalog-item-image" src="image\card\blueberry.jpg" width="168" height="168" alt="Черника">
                 <p class="catalog-item-description">Крем-брюле с черничным джемом </p>
                 <b class="price">330 р/<span>кг</span></b>
                 <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
         </li>
         <li class="catalog-item">
-            <img class="catalog-item-image" src="" alt="Бабл-гам">
             <h3 class="catalog-item-title">Бабл-гам</h3>
+            <img class="catalog-item-image" src="image\card\buble-gum.jpg" width="168" height="168" alt="Бабл-гам">
             <p class="catalog-item-description">Ванильный пломбир со сладкой посыпкой</p>
             <b class="price">320 р/<span>кг</span></b>
             <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
         </li>
     <li class="catalog-item">
-        <img class="catalog-item-image" src="" alt="Ежевика">
         <h3 class="catalog-item-title">Ежевика</h3>
+        <img class="catalog-item-image" src="image\card\blackberry.jpg" width="168" height="168" alt="Ежевика">
         <p class="catalog-item-description">Сливочное мороженое с ежевичным джемом</p>
         <b class="price">330 р/<span>кг</span></b>
         <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
     </li>
 <li class="catalog-item">
-    <img class="catalog-item-image" src="" alt="Банан">
     <h3 class="catalog-item-title">Банан</h3>
+    <img class="catalog-item-image" src="image\card\banana.jpg" width="168" height="168" alt="Банан">
     <p class="catalog-item-description">Сливочный пломбир с банановым вкусом</p>
     <b class="price">340 р/<span>кг</span></b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
-    <img class="catalog-item-image" src="" alt="Шоколадка">
     <h3 class="catalog-item-title">Шоколадка</h3>
+    <img class="catalog-item-image" src="image\card\chocolate.jpg" width="168" height="168" alt="Шоколадка">
     <p class="catalog-item-description">Классический шоколадный пломбир</p>
     <b class="price">270 р/<span>кг</span></b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
-    <img class="catalog-item-image" src="" alt="Клубничка">
     <h3 class="catalog-item-title">Клубничка</h3>
+    <img class="catalog-item-image" src="image\card\strawberry.jpg" width="168" height="168" alt="Клубничка">
     <p class="catalog-item-description">Сливочный пломбир с клубничным вкусом</p>
     <b class="price">300 р/<span>кг</span></b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
-    <img class="catalog-item-image" src="" alt="Лимон">
     <h3 class="catalog-item-title">Лимон</h3>
+    <img class="catalog-item-image" src="image\card\lemon.jpg" width="168" height="168" alt="Лимон">
     <p class="catalog-item-description">Освежающий лимонный сорбет</p>
     <b class="price">310 р/<span>кг</span></b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
-    <img class="catalog-item-image" src="" alt="Ментол">
     <h3 class="catalog-item-title">Ментол</h3>
+    <img class="catalog-item-image" src="image\card\menthol.jpg" width="168" height="168" alt="Ментол">
     <p class="catalog-item-description">Сливочный пломбир с ментоловым сиропом</p>
     <b class="price">310 р/<span>кг</span></b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
-    <img class="catalog-item-image" src="" alt="Орешек">
     <h3 class="catalog-item-title">Орешек</h3>
+    <img class="catalog-item-image" src="image\card\nut.jpg" width="168" height="168" alt="Орешек">
     <p class="catalog-item-description">Фисташковый пломбир с шоколадным сиропом</p>
     <b class="price">360 р/<span>кг</span></b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
-    <img class="catalog-item-image" src="" alt="Крем-брюле">
-    <h3 class="catalog-item-title">Крем-брюле</h3>
+     <h3 class="catalog-item-title">Крем-брюле</h3>
+    <img class="catalog-item-image" src="image\card\creme_brulee.jpg" width="168" height="168" alt="Крем-брюле">
     <p class="catalog-item-description">Классическое крем-брюле</p>
     <b class="price">310 р/<span>кг</span></b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
@@ -271,7 +267,7 @@
         </ul>
       </section>
       <section class="copyrights">
-      <img class="copyright-logo" src="" alt="Логотип Академии">
+      <img class="copyright-logo" src="image\logo_htmlacademy.svg" width="93" height="27" alt="Логотип Академии">
       <p class="copyright-text">Сделано в .html academy © 2021</p>
       </section>
       </footer>
