--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
   <body>
 <header class="page-header">
   <nav class="navigation">
+    <a><img class="logo" src="image\logo.svg" width=137px height=55.72px alt="Логотип фирмы Глейси"></a>
     <ul class="navigation-list">
-      <li class="navigation-item">
-        <a>
-          <img class="logo" src="img\logo.jpg" alt="Логотип фирмы Глейси">
-        </a>
-      </li>
       <li class="navigation-item">
         <a class="navigation-link" href="catalog.html">Каталог</a>
       </li>
@@ -49,9 +45,9 @@
       <p class="slider-discription">Натуральное мороженое из свежих сливок
       и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
       <a class="button button-all" href="#">Заказать</a>
-      <img class="slider-image" src="img\ice1.jpg" alt="Нежный пломбир с клубничным джемом">
-      <img class="slider-image" src="" alt="Сливочное мороженое со вкусом банана">
-      <img class="slider-image" src="" alt="Карамельный пломбир с маршмеллоу">
+      <img class="slider-image" src="image\slider_items\big_delicate_ice_cream.jpg" width="306" height="507" alt="Нежный пломбир с клубничным джемом">
+      <img class="slider-image" src="image\slider_items\small_creamy_ice_cream.png" width="66" height="150" alt="Сливочное мороженое со вкусом банана">
+      <img class="slider-image" src="image\slider_items\small_caramel_ice_cream.png" width="66" height="150" alt="Карамельный пломбир с маршмеллоу">
       <button class="slider-button slider-prev" type="button">
           <span class="visually-hidden">Предыдущее фото</span>
       </button>
@@ -64,9 +60,9 @@
       <p class="slider-discription">Сливочное мороженое с ярким банановым вкусом подарит 
         вам свежесть и наслаждение даже в самый жаркий летний день.</p>
       <a class="button button-all" href="#">Заказать</a>
-      <img class="slider-image" src="img\ice2.jpg" alt="Сливочное мороженое со вкусом банана">
-      <img class="slider-image" src="" alt="Карамельный пломбир с маршмеллоу">
-      <img class="slider-image" src="" alt="Нежный пломбир с клубничным джемом">
+      <img class="slider-image" src="image\slider_items\big_creamy_ice_cream.jpg" width="306" height="507" alt="Сливочное мороженое со вкусом банана">
+      <img class="slider-image" src="image\slider_items\small_caramel_ice_cream.png" width="66" height="150" alt="Карамельный пломбир с маршмеллоу">
+      <img class="slider-image" src="image\slider_items\small_delicate_ice_cream.png" width="66" height="150" alt="Нежный пломбир с клубничным джемом">
       <button class="slider-button slider-prev" type="button">
           <span class="visually-hidden">Предыдущее фото</span>
       </button>
@@ -78,9 +74,9 @@
     <h2 class="slider-title">Карамельный пломбир с маршмеллоу</h2>
       <p class="slider-discription">Необычный сладкий десерт с карамельным топпингом и кусочками зефира завоюет сердца сладкоежек всех возрастов.</p>
       <a class="button button-all" href="#">Заказать</a>
-      <img class="slider-image" src="img\ice3.jpg" alt="Карамельный пломбир с маршмеллоу">
-      <img class="slider-image" src="" alt="Нежный пломбир с клубничным джемом">
-      <img class="slider-image" src="" alt="Сливочное мороженое со вкусом банана">
+      <img class="slider-image" src="image\slider_items\big_caramel_ice_cream.jpg" width="306" height="507" alt="Карамельный пломбир с маршмеллоу">
+      <img class="slider-image" src="image\slider_items\small_delicate_ice_cream.png" width="66" height="150" alt="Нежный пломбир с клубничным джемом">
+      <img class="slider-image" src="image\slider_items\small_creamy_ice_cream.png" width="66" height="150" alt="Сливочное мороженое со вкусом банана">
       <button class="slider-button slider-prev" type="button">
           <span class="visually-hidden">Предыдущее фото</span>
       </button>
@@ -146,29 +142,29 @@
   <h2 class="catalog-popular-title">Попробуйте самые популярные вкусы нашего мороженого</h2>
   <ol class="catalog-popular-list">
 <li class="catalog-popular-item raspberry">
-  <img src="" alt="Малинка">
   <h3 class="catalog-popular-item-title">Малинка</h3>
+  <img src="image\card\raspberry.jpg" width="168" height="168" alt="Малинка">
   <p class="catalog-popular-description">Сливочное мороженое с малиновым джемом</p>
   <b class="price">310 р/<span>кг</span></b>
   <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-popular-item pistachio">
-  <img src="" alt="Фисташка">
   <h3 class="catalog-popular-item-title">Фисташка</h3>
+  <img src="image\card\pistachio.jpg" width="168" height="168" alt="Фисташка">
   <p class="catalog-popular-description">Фисташковый пломбир с кусочками шоколада</p>
   <b class="price">340 р/<span>кг</span></b>
   <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-popular-item blueberry">
-  <img src="" alt="Черника">
   <h3 class="catalog-popular-item-title">Черника</h3>
+  <img src="image\card\blueberry.jpg" width="168" height="168" alt="Черника">
   <p class="catalog-popular-description">Крем-брюле с черничным джемом</p>
   <b class="price">330 р/<span>кг</span></b>
   <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-popular-item buble-gum">
-  <img src="" alt="Бабл-гам">
   <h3 class="catalog-popular-item-title">Бабл-гам</h3>
+  <img src="image\card\buble-gum.jpg" width="168" height="168" alt="Бабл-гам">
   <p class="catalog-popular-description">Ванильный пломбир со сладкой посыпкой</p>
   <b class="price">320 р/<span>кг</span></b>
   <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
@@ -264,7 +260,7 @@
   </ul>
 </section>
 <section class="copyrights">
-<img class="copyright-logo" src="" alt="Логотип Академии">
+<img class="copyright-logo" src="image\logo_htmlacademy.svg" width="93" height="27" alt="Логотип Академии">
 <p class="copyright-text">Сделано в .html academy © 2021</p>
 </section>
 </footer>
