Some stylization changes

--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Каталог</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles\styles.css">
 </head>
 <body>
     <header class="page-header">
@@ -22,7 +22,7 @@
           </ul>
           <ul class="navigation-list navigation-user">
             <li>
-              <a href="tel:+78005558628">+7 800 555-86-28</a>
+              <a class="navigation-link-phone" href="tel:+78005558628">+7 800 555-86-28</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#"><span class="visually-hidden">Поиск</span></a>
@@ -123,84 +123,84 @@
                         <h3 class="catalog-item-title">Малинка</h3>
                         <img class="catalog-item-image" src="image\card\raspberry.jpg" width="168" height="168" alt="Малинка">
                         <p class="catalog-item-description">Сливочное мороженое с малиновым джемом</p>
-                        <b class="price">310 р/<span>кг</span></b>
+                        <b class="price">310 ₽/кг</b>
                         <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>    
                 </li>
                 <li class="catalog-item">
                     <h3 class="catalog-item-title">Фисташка</h3>
                     <img class="catalog-item-image" src="image\card\pistachio.jpg" width="168" height="168" alt="Фисташка">
                     <p class="catalog-item-description"> Фисташковый пломбир с кусочками шоколада</p>
-                    <b class="price">340 р/<span>кг</span></b>
+                    <b class="price">340 ₽/кг</b>
                     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
                 </li>
             <li class="catalog-item">
                 <h3 class="catalog-item-title">Черника</h3>
                 <img class="catalog-item-image" src="image\card\blueberry.jpg" width="168" height="168" alt="Черника">
                 <p class="catalog-item-description">Крем-брюле с черничным джемом </p>
-                <b class="price">330 р/<span>кг</span></b>
+                <b class="price">330 ₽/кг</b>
                 <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
         </li>
         <li class="catalog-item">
             <h3 class="catalog-item-title">Бабл-гам</h3>
             <img class="catalog-item-image" src="image\card\buble-gum.jpg" width="168" height="168" alt="Бабл-гам">
             <p class="catalog-item-description">Ванильный пломбир со сладкой посыпкой</p>
-            <b class="price">320 р/<span>кг</span></b>
+            <b class="price">320 ₽/кг</b>
             <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
         </li>
     <li class="catalog-item">
         <h3 class="catalog-item-title">Ежевика</h3>
         <img class="catalog-item-image" src="image\card\blackberry.jpg" width="168" height="168" alt="Ежевика">
         <p class="catalog-item-description">Сливочное мороженое с ежевичным джемом</p>
-        <b class="price">330 р/<span>кг</span></b>
+        <b class="price">330 ₽/кг</b>
         <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
     </li>
 <li class="catalog-item">
     <h3 class="catalog-item-title">Банан</h3>
     <img class="catalog-item-image" src="image\card\banana.jpg" width="168" height="168" alt="Банан">
     <p class="catalog-item-description">Сливочный пломбир с банановым вкусом</p>
-    <b class="price">340 р/<span>кг</span></b>
+    <b class="price">340 ₽/кг</b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
     <h3 class="catalog-item-title">Шоколадка</h3>
     <img class="catalog-item-image" src="image\card\chocolate.jpg" width="168" height="168" alt="Шоколадка">
     <p class="catalog-item-description">Классический шоколадный пломбир</p>
-    <b class="price">270 р/<span>кг</span></b>
+    <b class="price">270 ₽/кг</b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
     <h3 class="catalog-item-title">Клубничка</h3>
     <img class="catalog-item-image" src="image\card\strawberry.jpg" width="168" height="168" alt="Клубничка">
     <p class="catalog-item-description">Сливочный пломбир с клубничным вкусом</p>
-    <b class="price">300 р/<span>кг</span></b>
+    <b class="price">300 ₽/кг</b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
     <h3 class="catalog-item-title">Лимон</h3>
     <img class="catalog-item-image" src="image\card\lemon.jpg" width="168" height="168" alt="Лимон">
     <p class="catalog-item-description">Освежающий лимонный сорбет</p>
-    <b class="price">310 р/<span>кг</span></b>
+    <b class="price">310 ₽/кг</b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
     <h3 class="catalog-item-title">Ментол</h3>
     <img class="catalog-item-image" src="image\card\menthol.jpg" width="168" height="168" alt="Ментол">
     <p class="catalog-item-description">Сливочный пломбир с ментоловым сиропом</p>
-    <b class="price">310 р/<span>кг</span></b>
+    <b class="price">310 ₽/кг</b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
     <h3 class="catalog-item-title">Орешек</h3>
     <img class="catalog-item-image" src="image\card\nut.jpg" width="168" height="168" alt="Орешек">
     <p class="catalog-item-description">Фисташковый пломбир с шоколадным сиропом</p>
-    <b class="price">360 р/<span>кг</span></b>
+    <b class="price">360 ₽/кг</b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
 <li class="catalog-item">
      <h3 class="catalog-item-title">Крем-брюле</h3>
     <img class="catalog-item-image" src="image\card\creme_brulee.jpg" width="168" height="168" alt="Крем-брюле">
     <p class="catalog-item-description">Классическое крем-брюле</p>
-    <b class="price">310 р/<span>кг</span></b>
+    <b class="price">310 ₽/кг</b>
     <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
             </ul>
