--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles\styles.css">
   </head>
   <body>
 <header class="page-header">
@@ -21,8 +21,8 @@
       </li>
     </ul>
     <ul class="navigation-list navigation-user">
-      <li>
-        <a href="tel:+78005558628">+7 800 555-86-28</a>
+      <li class="navigation-item">
+        <a class="navigation-link-phone" href="tel:+78005558628">+7 800 555-86-28</a>
       </li>
       <li class="navigation-item">
         <a class="navigation-link" href="#"><span class="visually-hidden">Поиск</span></a>
@@ -132,7 +132,7 @@
     </li>
     <li class="gift-item">
       <h3 class="gift-title">Маршмеллоу даром!</h3>
-      <p> class="gift-description"При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+      <p class="gift-description"> При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
       <a class="button button-all" href="#">Хочу подарок</a>
       <img src="" alt="Маршмеллоу">
     </li>
@@ -141,32 +141,32 @@
 <section class="catalog-popular">
   <h2 class="catalog-popular-title">Попробуйте самые популярные вкусы нашего мороженого</h2>
   <ol class="catalog-popular-list">
-<li class="catalog-popular-item raspberry">
-  <h3 class="catalog-popular-item-title">Малинка</h3>
-  <img src="image\card\raspberry.jpg" width="168" height="168" alt="Малинка">
-  <p class="catalog-popular-description">Сливочное мороженое с малиновым джемом</p>
-  <b class="price">310 р/<span>кг</span></b>
-  <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-</li>
-<li class="catalog-popular-item pistachio">
-  <h3 class="catalog-popular-item-title">Фисташка</h3>
+    <li class="catalog-list">
+      <h3 class="catalog-item-title">Малинка</h3>
+      <img src="image\card\raspberry.jpg" width="168" height="168" alt="Малинка">
+      <p class="catalog-description">Сливочное мороженое с малиновым джемом</p>
+      <b class="price">310 ₽/кг</b>
+      <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
+    </li>
+<li class="catalog-item-title">
+  <h3 class="catalog-item-title">Фисташка</h3>
   <img src="image\card\pistachio.jpg" width="168" height="168" alt="Фисташка">
-  <p class="catalog-popular-description">Фисташковый пломбир с кусочками шоколада</p>
-  <b class="price">340 р/<span>кг</span></b>
+  <p class="catalog-description">Фисташковый пломбир с кусочками шоколада</p>
+  <b class="price">340 ₽/кг</b>
   <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
-<li class="catalog-popular-item blueberry">
-  <h3 class="catalog-popular-item-title">Черника</h3>
+<li class="catalog-list">
+  <h3 class="catalog-item-title">Черника</h3>
   <img src="image\card\blueberry.jpg" width="168" height="168" alt="Черника">
-  <p class="catalog-popular-description">Крем-брюле с черничным джемом</p>
-  <b class="price">330 р/<span>кг</span></b>
+  <p class="catalog-description">Крем-брюле с черничным джемом</p>
+  <b class="price">330 ₽/кг</b>
   <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
-<li class="catalog-popular-item buble-gum">
-  <h3 class="catalog-popular-item-title">Бабл-гам</h3>
+<li class="catalog-list">
+  <h3 class="catalog-item-title">Бабл-гам</h3>
   <img src="image\card\buble-gum.jpg" width="168" height="168" alt="Бабл-гам">
-  <p class="catalog-popular-description">Ванильный пломбир со сладкой посыпкой</p>
-  <b class="price">320 р/<span>кг</span></b>
+  <p class="catalog-description">Ванильный пломбир со сладкой посыпкой</p>
+  <b class="price">320 ₽/кг</b>
   <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
 </li>
   </ol>
@@ -190,7 +190,7 @@
     <p class="subscribe-description">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
     <form class="subscribe-form" method="post" action="https://echo.htmlacademy.ru/">
       <input type="email" placeholder="email@example.com">
-      <button class="button" type="submit">Подписаться</button>
+      <button class="form-button" type="submit">Подписаться</button>
     </form>
   </div> 
 </section>
@@ -211,7 +211,7 @@
     <label for="address">Адрес</label>
     <input type="text" name="address" placeholder="ул. Большая Конюшенная, 8/19" id="address">
   </p>
-  <button class="button" type="submit">Отправить</button>
+  <button class="form-button" type="submit">Отправить</button>
 </form>
 </section>
 <section class="contacts">
@@ -220,7 +220,7 @@
 <p class="contact-address-text">Для заказов по телефону:</p>
 <h4 class="contact-phone">+7 (812) 812-12-12</h4>
 <p class="schedule">(с 10 до 20 ежедневно)</p>
-<a class="button button-feedback" href="#">Форма обратной связи</a>
+<button class="form-button" type="submit">Форма обратной связи</button>
 </section>
 </main>
 <footer class="page-footer">
@@ -244,24 +244,24 @@
   </ul>
 </section>
 <section class="cooperation">
-  <ul>
-    <li>
+  <ul class="cooperation-list">
+    <li class="cooperation-item">
       <a href="#">Для производителей</a>
     </li>
-    <li>
+    <li class="cooperation-item">
       <a href="#">О производстве</a>
     </li>
-    <li>
+    <li class="cooperation-item">
       <a href="#">Наши документы</a>
     </li>
-    <li>
+    <li class="cooperation-item">
       <a href="#">Экологические стандарты</a>
     </li>
   </ul>
 </section>
 <section class="copyrights">
 <img class="copyright-logo" src="image\logo_htmlacademy.svg" width="93" height="27" alt="Логотип Академии">
-<p class="copyright-text">Сделано в .html academy © 2021</p>
+<p class="copyright-text">Сделано в <a href="https://htmlacademy.ru/">.html academy</a> © 2021</p>
 </section>
 </footer>
   </body>
