--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
-    <link rel="stylesheet" href="styles\styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
 <header class="page-header">
@@ -216,9 +216,9 @@
 </section>
 <section class="contacts">
 <p class="contact-address-text">Адрес главного офиса и офлайн-магазина:</p>
-<h4 class="contact-address">наб. реки Карповки, 5 лит П, Санкт-Петербург</h4>
+<p class="contact-address">наб. реки Карповки, 5 лит П, Санкт-Петербург</p>
 <p class="contact-address-text">Для заказов по телефону:</p>
-<h4 class="contact-phone">+7 (812) 812-12-12</h4>
+<p class="contact-phone">+7 (812) 812-12-12</p>
 <p class="schedule">(с 10 до 20 ежедневно)</p>
 <button class="form-button" type="submit">Форма обратной связи</button>
 </section>
@@ -246,22 +246,22 @@
 <section class="cooperation">
   <ul class="cooperation-list">
     <li class="cooperation-item">
-      <a href="#">Для производителей</a>
+      <a class="cooperation-link-selected" href="#">Для производителей</a>
     </li>
     <li class="cooperation-item">
-      <a href="#">О производстве</a>
+      <a class="cooperation-link" href="#">О производстве</a>
     </li>
     <li class="cooperation-item">
-      <a href="#">Наши документы</a>
+      <a class="cooperation-link" href="#">Наши документы</a>
     </li>
     <li class="cooperation-item">
-      <a href="#">Экологические стандарты</a>
+      <a class="cooperation-link" href="#">Экологические стандарты</a>
     </li>
   </ul>
 </section>
 <section class="copyrights">
 <img class="copyright-logo" src="image\logo_htmlacademy.svg" width="93" height="27" alt="Логотип Академии">
-<p class="copyright-text">Сделано в <a href="https://htmlacademy.ru/">.html academy</a> © 2021</p>
+<p class="copyright-text">Сделано в <a class="copyright-link" href="https://htmlacademy.ru/">.html academy</a> © 2021</p>
 </section>
 </footer>
   </body>
