--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 <header class="page-header">
   <nav class="navigation">
-    <a><img class="navigation-logo" src="image\logo.svg" width=137px height=55.72px alt="Логотип фирмы Глейси"></a>
+    <a><img class="navigation-logo" src="image\logo.svg" width=137px height=56px alt="Логотип фирмы Глейси"></a>
     <ul class="navigation-list">
       <li class="navigation-item">
         <a class="navigation-link" href="catalog.html">Каталог</a>
@@ -28,7 +28,7 @@
         <a class="navigation-link" href="#"><span class="visually-hidden">Поиск</span></a>
       </li>
       <li class="navigation-item">
-        <a class="navigation-link" href="#"><span class="visually-hidden">Вход</span></a>
+        <a class="navigation-link" href="#">Вход</a>
       </li>
       <li class="navigation-item">
         <a class="navigation-link" href="#"><span class="visually-hidden">Корзина</span></a>
@@ -44,7 +44,7 @@
         <li class="slider-item">
             <h2 class="slider-title">Нежный пломбир с клубничным джемом</h2>
             <p class="slider-discription">Натуральное мороженое из свежих сливок<br>
-            и молока с вкуснейшим клубничным джемом<br> – это идеальный десерт для всей семьи.</p>
+            и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
             <a class="button button-all" href="#">Заказать</a>
         </li>
         <li class="slider-item">
@@ -67,6 +67,7 @@
           <img class="slider-image" src="image\slider_items\small_caramel_ice_cream.png" width="66" height="150" alt="Карамельный пломбир с маршмеллоу">
         </li>
       </ul>
+      <div class="slider-footer">
     <ul class="slider-pagination-list">
       <li class="slider-pagination-item">
           <button class="slider-pagination-button slider-pagination-button-current" type="button">
@@ -87,20 +88,24 @@
     <ul class="social-list">
       <li class="social-item">
         <a class="social-link" href="https://t.me/htmlacademy">
+          <img src="image\icons\telegram.svg " width="24" height="24" alt="Телеграм">
           <span class="visually-hidden">Телеграм</span>
         </a>
       </li>
       <li class="social-item">
         <a class="social-link" href="https://vk.com/htmlacademy">
+          <img src="image\icons\vk.svg" width="24" height="24" alt="Вконтакте">
           <span class="visually-hidden">Вконтакте</span>
         </a>
       </li>
       <li class="social-item">
         <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
+          <img src="image\icons\youtube.svg" width="24" height="24" alt="Ютуб">
           <span class="visually-hidden">Ютуб</span>
         </a>
       </li>
     </ul>
+  </div>
   </section>
     <h2 class="gifts-presents">Заказывайте мороженое<br> и получайте подарки!</h2>
     <div class="index-colums">
@@ -120,28 +125,28 @@
     <ul class="catalog-popular-list">
         <li class="catalog-list">
           <h3 class="catalog-item-title">Малинка</h3>
-          <img src="image\card\raspberry.jpg" width="168" height="168" alt="Малинка">
+          <img class="catalog-item-image" src="image\card\raspberry.jpg" width="168" height="168" alt="Малинка">
           <p class="catalog-description">Сливочное мороженое с малиновым джемом</p>
           <b class="price">310 ₽/кг</b>
           <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
         </li>
       <li class="catalog-list">
         <h3 class="catalog-item-title">Фисташка</h3>
-        <img src="image\card\pistachio.jpg" width="168" height="168" alt="Фисташка">
+        <img class="catalog-item-image" src="image\card\pistachio.jpg" width="168" height="168" alt="Фисташка">
         <p class="catalog-description">Фисташковый пломбир с кусочками шоколада</p>
         <b class="price">340 ₽/кг</b>
         <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
       </li>
       <li class="catalog-list">
         <h3 class="catalog-item-title">Черника</h3>
-        <img src="image\card\blueberry.jpg" width="168" height="168" alt="Черника">
+        <img class="catalog-item-image" src="image\card\blueberry.jpg" width="168" height="168" alt="Черника">
         <p class="catalog-description">Крем-брюле с черничным джемом</p>
         <b class="price">330 ₽/кг</b>
         <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
       </li>
       <li class="catalog-list">
         <h3 class="catalog-item-title">Бабл-гам</h3>
-        <img src="image\card\buble-gum.jpg" width="168" height="168" alt="Бабл-гам">
+        <img class="catalog-item-image" src="image\card\buble-gum.jpg" width="168" height="168" alt="Бабл-гам">
         <p class="catalog-description">Ванильный пломбир со сладкой посыпкой</p>
         <b class="price">320 ₽/кг</b>
         <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
@@ -196,7 +201,7 @@
     <div class="contacts-container">
       <p class="contact-address-text">Адрес главного офиса и офлайн-магазина:</p>
       <p class="contact-address">наб. реки Карповки, 5 лит П, Санкт-Петербург</p>
-      <p class="contact-address-text">Для заказов по телефону:</p>
+      <p class="contact-phone-text">Для заказов по телефону:</p>
       <p class="contact-phone">+7 (812) 812-12-12</p>
       <p class="schedule">(с 10 до 20 ежедневно)</p>
       <button class="form-button" type="submit">Форма обратной связи</button>
@@ -206,20 +211,23 @@
 </main>
 <footer class="page-footer">
   <div class="page-footer-container">
-        <section class="social">
-          <ul class="social-list">
-            <li class="social-item">
-              <a class="social-link" href="https://t.me/htmlacademy">
+        <section class="footer-social">
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://t.me/htmlacademy">
+                <img src="image\icons\telegram.svg " width="24" height="24" alt="Телеграм">
                 <span class="visually-hidden">Телеграм</span>
               </a>
             </li>
-            <li class="social-item">
-              <a class="social-link" href="https://vk.com/htmlacademy">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
+                <img src="image\icons\vk.svg" width="24" height="24" alt="Вконтакте">
                 <span class="visually-hidden">Вконтакте</span>
               </a>
             </li>
-            <li class="social-item">
-              <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+                <img src="image\icons\youtube.svg" width="24" height="24" alt="Ютуб">
                 <span class="visually-hidden">Ютуб</span>
               </a>
             </li>
