--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
         <li class="slider-item substrate">
             <img class="slider-image" src="image\slider_items\big_delicate_ice_cream.png" width="306" height="507" alt="Нежный пломбир с клубничным джемом">
               <div class="slider-control"> 
-                <button class="slider-button slider-prev" type="button">
+                <button class="slider-button" type="button">
                       <svg class="slider-icon" aria-hidden="true" focusable="false" fill="currentColor" width="6" height="12" viewBox="0 0 6 12" xmlns="http://www.w3.org/2000/svg">
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M5.8 1.8a.66.66 0 1 0-.94-.94L.2 5.53a.67.67 0 0 0 0 .94l4.67 4.67a.66.66 0 1 0 .94-.94L1.6 6l4.2-4.2Z"/>
                       </svg>
                       <span class="visually-hidden">Предыдущее фото</span>
                   </button>
-                  <button class="slider-button slider-next" type="button">
+                  <button class="slider-button" type="button">
                       <svg class="slider-icon" aria-hidden="true" focusable="false" fill="currentColor" width="7" height="12" viewBox="0 0 7 12"  xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M1.14.86a.66.66 0 1 0-.95.95L4.4 6 .2 10.2a.67.67 0 0 0 .95.94L5.8 6.48a.66.66 0 0 0 0-.94L1.15.86Z"/>
                       </svg>
@@ -172,7 +172,7 @@
                   </a>
               </div>
             </article>
-            </li>
+          </li>
       <li class="catalog-item-popular">
         <article class="catalog-card-content-popular">
           <img class="catalog-item-image-popular" src="image/card/pistachio.png" width="168" height="168" alt="Фисташка">
