--- a/catalog.html
+++ b/catalog.html
@@ -14,6 +14,25 @@
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link current-link" href="catalog.html">Каталог</a>
+            <div class="popover popover-catalog">
+              <ul class="popover-catalog-list">
+                <li class="popover-catalog-item">
+                  <a class="popover-catalog-link new" href="#">Новинки</a>
+                </li>
+                <li class="popover-catalog-item">
+                  <a class="popover-catalog-link " href="#">Сливочное</a>
+                </li>
+                <li class="popover-catalog-item">
+                  <a class="popover-catalog-link" href="#">Щербеты</a>
+                </li>
+                <li class="popover-catalog-item">
+                  <a class="popover-catalog-link" href="#">Фруктовый лед</a>
+                </li>
+                <li class="popover-catalog-item">
+                  <a class="popover-catalog-link" href="#">Мелорин</a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="delivery-payment.html">Доставка и оплата</a>
@@ -31,7 +50,13 @@
               <svg class="navigation-icon" aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M2.66 7.33a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.45a.67.67 0 1 1-.94.94l-2.45-2.45Z" fill="#2D3440"/>
               </svg>
-              <span class="visually-hidden">Поиск</span></a>
+              <span class="visually-hidden">Поиск</span>
+              <div class="popover popover-search">
+                <form class="popover-form">
+                  <input class="field popover-field" type="text" placeholder="Поиск по сайту">
+                </form>
+              </div>
+            </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link navigation-link-login" href="#">
@@ -66,80 +91,117 @@
                 </li>
             </ul>
         </header>
-          <h2 class="filter-name">Сливочное мороженое</h2>
-          <section class="filter">
-              <div class="filter-option">
-                <p class="sorting">Сортировка:</p>
-            <form class="catalog-filter" method="get" action="https://echo.htmlacademy.ru/">
-            <select class="select-variants">
-                <option value="popular">По популярности</option>
-                <option value="popular">Самые дешевые</option>
-                <option value="popular">Самые дорогие</option>
-            </select>
-            </div>
-            <div class="range">
-                <label class="control"><p class="sorting">Цена: 100 ₽ – 500 ₽</p>
+    <h2 class="filter-name">Сливочное мороженое</h2>
+      <section class="filter">
+        <form class="catalog-filter" method="get" action="https://echo.htmlacademy.ru/">
+          <fieldset class="catalog-filter-group sorting">
+            <legend class="catalog-filter-title">Сортировка:</legend>
+              <select class="select-variants" aria-label="Сортировка">
+                <option value="popular">по популярности</option>
+                <option value="cheap">самые дешевые</option>
+                <option value="expensive">самые дорогие</option>
+              </select>
+          </fieldset>
+        <fieldset class="catalog-filter-group price-scale">
+          <legend class="catalog-filter-title">
+           <div class="range-wrapper-inputs">
+                Цена:<label class="catalog-filter-label">
+                  <input class="range-input" type="number" value="100" name="min-price">₽
                 </label>
-            </div>
-                <ul class="fat-list">
-                  <p class="sorting">Жирность:</p>
-                  <div class="fat-list-container">
-                    <li class="fat-item">
-                        <label class="control">
-                            <input class="control-input" type="radio" name="persentage" value="0%">0%
-                        </label>
-                    </li>
-                    <li class="fat-item">
-                        <label class="control">
-                            <input class="control-input" type="radio" name="persentage" value="10%" checked>до 10%
-                        </label>
-                    </li>
-                    <li class="fat-item">
-                        <label class="control">
-                            <input class="control-input" type="radio" name="persentage" value="30%">до 30%
-                        </label>
-                    </li>
-                    <li class="fat-item">
-                        <label class="control">
-                            <input class="control-input" type="radio" name="persentage" value="more-30%">выше 30%
-                        </label>
-                    </li>
-                  </div>  
-                </ul>
-             </p>
-            <ul class="filler-list">
-                <p class="sorting">Наполнители:</p>
-              <div class="filler">
-                <li class="filler-item">
-                    <label class="control">
-                        <input class="control-input" type="checkbox" name="chokolate" checked>шоколадные
-                    </label>
-                </li>
-                <li class="filler-item">
-                    <label class="control">
-                        <input class="control-input" type="checkbox" name="sugar" checked>сахарные посыпки
-                    </label>
-                </li>
-                <li class="filler-item">
-                    <label class="control">
-                        <input class="control-input" type="checkbox" name="fruits">фрукты
-                    </label>
-                </li>
-                <li class="filler-item">
-                    <label class="control">
-                        <input class="control-input" type="checkbox" name="toppings">сиропы
-                    </label>
-                </li>
-                <li class="filler-item">
-                    <label class="control">
-                        <input class="control-input" type="checkbox" name="jam">джемы
-                    </label>
-                </li>
+                <label class="catalog-filter-label">
+                  - <input class="range-input" type="number" value="500" name="max-price" style="width: 37px">₽
+                </label>
               </div>
-           </ul>
+            </legend>
+            <div class="range">
+              <div class="range-scale">
+                 <div class="range-bar" style="left: 40px; width: 56px">
+                    <button class="range-toggle toggle-small toggle-min">
+                        <span class="visually-hidden">Изменить минимальную цену.</span>
+                    </button>
+                    <button class="range-toggle toggle-small toggle-max">
+                        <span class="visually-hidden">Изменить максимальную цену.</span>
+                    </button>
+                 </div>
+                </div>
+            </div>
+        </fieldset>
+          <fieldset class="catalog-filter-group fat-scale">
+            <legend class="catalog-filter-title">Жирность:</legend>
+                <ul class="fat-list">
+                    <li class="fat-item">
+                        <label class="control">
+                            <input class="visually-hidden control-input" type="radio" name="persentage" value="0%">
+                            <span class="control-mark"></span>
+                            <span class="control-label">0%</span>
+                        </label>
+                    </li>
+                    <li class="fat-item">
+                        <label class="control">
+                            <input class=" visually-hidden control-input" type="radio" name="persentage" value="10%" checked>
+                            <span class="control-mark"></span>
+                            <span class="control-label">до 10%</span>
+                        </label>
+                    </li>
+                    <li class="fat-item">
+                        <label class="control">
+                            <input class="visually-hidden control-input" type="radio" name="persentage" value="30%">
+                            <span class="control-mark"></span>
+                            <span class="control-label">до 30%</span>
+                        </label>
+                    </li>
+                    <li class="fat-item">
+                        <label class="control">
+                            <input class="visually-hidden control-input" type="radio" name="persentage" value="more-30%">
+                            <span class="control-mark"></span>
+                            <span class="control-label">выше 30%</span>
+                        </label>
+                    </li> 
+                </ul>
+              </fieldset>
+            <fieldset class="catalog-filter-group filler-scale">
+              <legend class="catalog-filter-title">Наполнители:</legend>
+               <ul class="filler-list">
+                  <li class="filler-item">
+                      <label class="control">
+                          <input class="visually-hidden control-input" type="checkbox" name="chokolate" checked>
+                          <span class="control-mark"></span>
+                          <span class="control-label">шоколадные</span>
+                      </label>
+                  </li>
+                  <li class="filler-item">
+                      <label class="control">
+                          <input class="visually-hidden control-input" type="checkbox" name="sugar" checked>
+                          <span class="control-mark"></span>
+                          <span class="control-label">сахарные посыпки</span>
+                      </label>
+                  </li>
+                  <li class="filler-item">
+                      <label class="control">
+                          <input class="visually-hidden control-input" type="checkbox" name="fruits">
+                          <span class="control-mark"></span>
+                          <span class="control-label">фрукты</span>
+                      </label>
+                  </li>
+                  <li class="filler-item">
+                      <label class="control">
+                          <input class="visually-hidden control-input" type="checkbox" name="toppings">
+                          <span class="control-mark"></span>
+                          <span class="control-label">сиропы</span>
+                      </label>
+                  </li>
+                  <li class="filler-item">
+                      <label class="control">
+                          <input class="visually-hidden control-input" type="checkbox" name="jam">
+                          <span class="control-mark"></span>
+                          <span class="control-label">джемы</span>
+                      </label>
+                  </li>
+              </ul>
+          </fieldset>
             <button class="button button-accepted" type="submit">Применить</button>
-          </form> 
-        </section>
+        </form> 
+      </section>
         <section class="catalog">
           <ul class="catalog-list">
             <li class="catalog-item">   
