--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                 </button>
                 </li>
               </ul>
+          <div class="popover-cart-footer">
+            <button class="form-button popover-cart-button">Оформить заказ</button>
+            <span class="cart-summ">Итого: 790 ₽</span>
+          </div>
           </div>
         </a>
       </li>
