add different icons

--- a/catalog.html
+++ b/catalog.html
@@ -206,7 +206,7 @@
           <ul class="catalog-list">
             <li class="catalog-item">   
               <article class="catalog-card-content">  
-                <img class="catalog-item-image" src="image/card/raspberry.png" width="168" height="168" alt="Малинка">
+                <img class="catalog-item-image" src="image/card/raspberry.png" width="168" height="168" alt="Малинка.">
                 <h3 class="catalog-item-title">Малинка</h3>
                 <p class="catalog-description">Сливочное мороженое с малиновым джемом</p>
                 <div class="catalog-footer">
@@ -220,7 +220,7 @@
                 </li>
           <li class="catalog-item">
             <article class="catalog-card-content">
-              <img class="catalog-item-image" src="image/card/pistachio.png" width="168" height="168" alt="Фисташка">
+              <img class="catalog-item-image" src="image/card/pistachio.png" width="168" height="168" alt="Фисташка.">
               <h3 class="catalog-item-title">Фисташка</h3>
               <p class="catalog-description">Фисташковый пломбир с кусочками шоколада</p>
               <div class="catalog-footer">
@@ -234,7 +234,7 @@
           </li>
           <li class="catalog-item">
             <article class="catalog-card-content">
-              <img class="catalog-item-image" src="image/card/blueberry.png" width="168" height="168" alt="Черника">
+              <img class="catalog-item-image" src="image/card/blueberry.png" width="168" height="168" alt="Черника.">
               <h3 class="catalog-item-title">Черника</h3>
               <p class="catalog-description">Крем-брюле с черничным джемом</p>
               <div class="catalog-footer">
@@ -248,7 +248,7 @@
           </li>
           <li class="catalog-item">
             <article class="catalog-card-content">
-              <img class="catalog-item-image" src="image/card/buble-gum.png" width="168" height="168" alt="Бабл-гам">
+              <img class="catalog-item-image" src="image/card/buble-gum.png" width="168" height="168" alt="Бабл-гам.">
               <h3 class="catalog-item-title">Бабл-гам</h3>
               <p class="catalog-description">Ванильный пломбир со сладкой посыпкой</p>
               <div class="catalog-footer">
@@ -262,7 +262,7 @@
           </li>
         <li class="catalog-item">
               <article class="catalog-card-content">
-                <img class="catalog-item-image" src="image/card/blackberry.png" width="168" height="168" alt="Ежевика">
+                <img class="catalog-item-image" src="image/card/blackberry.png" width="168" height="168" alt="Ежевика.">
                 <h3 class="catalog-item-title">Ежевика</h3>
                 <p class="catalog-description">Сливочное мороженое с ежевичным джемом</p>
                 <div class="catalog-footer">
@@ -276,7 +276,7 @@
           </li>
     <li class="catalog-item">
         <article class="catalog-card-content">
-          <img class="catalog-item-image" src="image/card/banana.png" width="168" height="168" alt="Банан">
+          <img class="catalog-item-image" src="image/card/banana.png" width="168" height="168" alt="Банан.">
           <h3 class="catalog-item-title">Банан</h3>
           <p class="catalog-description">Сливочный пломбир с банановым вкусом</p>
           <div class="catalog-footer">
@@ -290,7 +290,7 @@
       </li>
     <li class="catalog-item">
         <article class="catalog-card-content">
-          <img class="catalog-item-image" src="image/card/chocolate.png" width="168" height="168" alt="Шоколадка">
+          <img class="catalog-item-image" src="image/card/chocolate.png" width="168" height="168" alt="Шоколадка.">
           <h3 class="catalog-item-title">Шоколадка</h3>
           <p class="catalog-description">Классический шоколадный пломбир</p>
           <div class="catalog-footer">
@@ -304,7 +304,7 @@
       </li>
     <li class="catalog-item">
        <article class="catalog-card-content">
-        <img class="catalog-item-image" src="image/card/strawberry.png" width="168" height="168" alt="Клубничка">
+        <img class="catalog-item-image" src="image/card/strawberry.png" width="168" height="168" alt="Клубничка.">
           <h3 class="catalog-item-title">Клубничка</h3>
           <p class="catalog-description">Сливочный пломбир с клубничным вкусом</p>
           <div class="catalog-footer">
@@ -318,7 +318,7 @@
       </li>
     <li class="catalog-item">
         <article class="catalog-card-content">
-          <img class="catalog-item-image" src="image/card/lemon.png" width="168" height="168" alt="Лимон">
+          <img class="catalog-item-image" src="image/card/lemon.png" width="168" height="168" alt="Лимон.">
           <h3 class="catalog-item-title">Лимон</h3>
           <p class="catalog-description">Освежающий лимонный сорбет</p>
           <div class="catalog-footer">
@@ -332,7 +332,7 @@
       </li>
     <li class="catalog-item">
         <article class="catalog-card-content">
-          <img class="catalog-item-image" src="image/card/menthol.png" width="168" height="168" alt="Ментол">
+          <img class="catalog-item-image" src="image/card/menthol.png" width="168" height="168" alt="Ментол.">
           <h3 class="catalog-item-title">Ментол</h3>
           <p class="catalog-description">Сливочный пломбир с ментоловым сиропом</p>
           <div class="catalog-footer">
@@ -346,7 +346,7 @@
       </li>
     <li class="catalog-item">
           <article class="catalog-card-content">
-            <img class="catalog-item-image" src="image/card/nut.png" width="168" height="168" alt="Орешек">
+            <img class="catalog-item-image" src="image/card/nut.png" width="168" height="168" alt="Орешек.">
            <h3 class="catalog-item-title">Орешек</h3>
             <p class="catalog-description">Фисташковый пломбир с шоколадным сиропом</p>
             <div class="catalog-footer">
@@ -360,7 +360,7 @@
       </li>
         <li class="catalog-item">
           <article class="catalog-card-content">
-            <img class="catalog-item-image" src="image/card/creme_brulee.png" width="168" height="168" alt="Крем-брюле">
+            <img class="catalog-item-image" src="image/card/creme_brulee.png" width="168" height="168" alt="Крем-брюле.">
             <h3 class="catalog-item-title">Крем-брюле</h3>
             <p class="catalog-description">Классическое крем-брюле</p>
             <div class="catalog-footer">
