--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header class="page-header">
   <nav class="navigation">
     <a class="navigation-logo">
-      <img class="page-header-logo" src="image\logo.svg" width=137px height=56px alt="Логотип фирмы Глейси">
+      <img class="page-header-logo" src="image/logo.svg" width=137px height=56px alt="Логотип фирмы Глейси.">
     </a>
     <ul class="navigation-list">
       <li class="navigation-item">
@@ -144,7 +144,7 @@
             <a class="button" href="#">Заказать</a>
         </li>
         <li class="slider-item substrate">
-            <img class="slider-image" src="image\slider_items\big_delicate_ice_cream.png" width="306" height="507" alt="Нежный пломбир с клубничным джемом">
+            <img class="slider-image" src="image/slider_items/big_delicate_ice_cream.png" width="306" height="507" alt="Нежный пломбир с клубничным джемом.">
               <div class="slider-control"> 
                 <button class="slider-button" type="button">
                       <svg class="slider-icon" aria-hidden="true" focusable="false" fill="currentColor" width="6" height="12" viewBox="0 0 6 12" xmlns="http://www.w3.org/2000/svg">
@@ -161,10 +161,10 @@
               </div> 
         </li>
         <li class="slider-item substrate-small-first">
-          <img class="slider-image-small" src="image\slider_items\small_creamy_ice_cream.png" width="66" height="150" alt="Сливочное мороженое со вкусом банана">
+          <img class="slider-image-small" src="image/slider_items/small_creamy_ice_cream.png" width="66" height="150" alt="Сливочное мороженое со вкусом банана.">
         </li>
         <li class="slider-item substrate-small-second">
-          <img class="slider-image-small" src="image\slider_items\small_caramel_ice_cream.png" width="66" height="150" alt="Карамельный пломбир с маршмеллоу">
+          <img class="slider-image-small" src="image/slider_items/small_caramel_ice_cream.png" width="66" height="150" alt="Карамельный пломбир с маршмеллоу.">
         </li>
       </ul>
       <div class="slider-footer">
@@ -240,7 +240,7 @@
     <ul class="catalog-list-popular">
         <li class="catalog-item-popular">   
             <article class="catalog-card-content-popular">  
-              <img class="catalog-item-image-popular" src="image/card/raspberry.png" width="168" height="168" alt="Малинка">
+              <img class="catalog-item-image-popular" src="image/card/raspberry.png" width="168" height="168" alt="Малинка.">
               <h3 class="catalog-item-title-popular">Малинка</h3>
               <p class="catalog-description-popular">Сливочное мороженое с малиновым джемом</p>
               <div class="catalog-footer-popular">
@@ -254,7 +254,7 @@
           </li>
       <li class="catalog-item-popular">
         <article class="catalog-card-content-popular">
-          <img class="catalog-item-image-popular" src="image/card/pistachio.png" width="168" height="168" alt="Фисташка">
+          <img class="catalog-item-image-popular" src="image/card/pistachio.png" width="168" height="168" alt="Фисташка.">
           <h3 class="catalog-item-title-popular">Фисташка</h3>
           <p class="catalog-description-popular">Фисташковый пломбир с кусочками шоколада</p>
           <div class="catalog-footer-popular">
@@ -268,7 +268,7 @@
       </li>
       <li class="catalog-item-popular">
         <article class="catalog-card-content-popular">
-          <img class="catalog-item-image-popular" src="image/card/blueberry.png" width="168" height="168" alt="Черника">
+          <img class="catalog-item-image-popular" src="image/card/blueberry.png" width="168" height="168" alt="Черника.">
           <h3 class="catalog-item-title-popular">Черника</h3>
           <p class="catalog-description-popular">Крем-брюле с черничным джемом</p>
           <div class="catalog-footer-popular">
@@ -282,7 +282,7 @@
       </li>
       <li class="catalog-item-popular">
         <article class="catalog-card-content-popular">
-          <img class="catalog-item-image-popular" src="image/card/buble-gum.png" width="168" height="168" alt="Бабл-гам">
+          <img class="catalog-item-image-popular" src="image/card/buble-gum.png" width="168" height="168" alt="Бабл-гам.">
           <h3 class="catalog-item-title-popular">Бабл-гам</h3>
           <p class="catalog-description-popular">Ванильный пломбир со сладкой посыпкой</p>
           <div class="catalog-footer-popular">
@@ -351,19 +351,17 @@
       <p class="delivery-conformation">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
         <form class="delivery-form" method="post" action="https://echo.htmlacademy.ru/"> 
           <p class="field-group delivery-date">
-            <span>
-              <label class="form-label" for="date">
-              Дата
+            <span class="form-label"> 
+              <label class="form-label" for="date">Дата</label>
               <span class="tooltip">
                 <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label">
-                <svg class="tooltip-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M8 2.333a5.667 5.667 0 1 0 0 11.334A5.667 5.667 0 0 0 8 2.333ZM1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8Zm7-.667c.368 0 .667.299.667.667v2.533a.667.667 0 1 1-1.334 0V8c0-.368.299-.667.667-.667ZM8 4.8a.667.667 0 1 0 0 1.333h.007a.667.667 0 0 0 0-1.333H8Z" fill="#2D3440"/>
-                </svg>
-                <span class="tooltip-text" aria-labelledby="tooltip-label" role="tooltip" id="tooltip-label">Укажите желаемую дату доставки</span>
-              </button>
+                  <svg class="tooltip-icon" width="16" height="16" viewBox="0 0 16 16" fill="correntColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M8 2.333a5.667 5.667 0 1 0 0 11.334A5.667 5.667 0 0 0 8 2.333ZM1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8Zm7-.667c.368 0 .667.299.667.667v2.533a.667.667 0 1 1-1.334 0V8c0-.368.299-.667.667-.667ZM8 4.8a.667.667 0 1 0 0 1.333h.007a.667.667 0 0 0 0-1.333H8Z"/>
+                  </svg>
+                </button>
+                <span class="tooltip-text" role="tooltip" id="tooltip-label">Введите название улицы, дома и квартиры</span>
               </span>
             </span>
-            </label>
             <input class="field" type="text" name="date" placeholder="01.04.2020" id="date">
           </p>
           <p class="field-group delivery-phone">
@@ -371,12 +369,17 @@
             <input class="field" type="text" name="phone" placeholder="+7 800 999-00-00" id="phone">
           </p>
           <p class="field-group delivery-address">
-            <label class="form-label" for="address">
-              Адрес
-              <button class="info">
-                <span class="visually-hidden">Посмотреть дополнительную информацию</span>
-              </button>
-            </label>
+            <span class="form-label">
+              <label class="form-label" for="address">Адрес</label>
+                <span class="tooltip">
+                  <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label">
+                    <svg class="tooltip-icon" width="16" height="16" viewBox="0 0 16 16" fill="correntColor" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M8 2.333a5.667 5.667 0 1 0 0 11.334A5.667 5.667 0 0 0 8 2.333ZM1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8Zm7-.667c.368 0 .667.299.667.667v2.533a.667.667 0 1 1-1.334 0V8c0-.368.299-.667.667-.667ZM8 4.8a.667.667 0 1 0 0 1.333h.007a.667.667 0 0 0 0-1.333H8Z"/>
+                    </svg>
+                  </button>
+                  <span class="tooltip-text" role="tooltip" id="tooltip-label">Введите название улицы, дома и квартиры</span>
+                </span>
+            </span>
             <input class="field" type="text" name="address" placeholder="ул. Большая Конюшенная, 8/19" id="address">
           </p>
           <button class="form-button button-delivery" type="submit">Отправить</button>
@@ -454,7 +457,7 @@
       </ul>
     </section>
     <section class="copyrights">
-      <img class="copyright-logo" src="image\logo_htmlacademy.svg" width="93" height="27" alt="Логотип Академии">
+      <img class="copyright-logo" src="image\logo_htmlacademy.svg" width="93" height="27" alt="Логотип Академии.">
       <p class="copyright-text">Сделано в <a class="copyright-link" href="https://htmlacademy.ru/">.html academy</a> © 2021</p>
       </section>
   </div>
